<resources>
    <string name="app_name">JGram</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">Welcome to JGram</string>
    <string name="grammar_activity_main">Tests Here</string>
    <string name="loading_activity_main">Loading...</string>
    <string name="action_settings">Settings</string>
    <string name="title_main">Random Japanese Sentences</string>
    <string name="title_settings">Some General Settings Here</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="grammar_test">Test</string>
    <string name="grammar_main">Grammar</string>
    <string name="g_butt1">Show Meaning</string>
    <string name="g_butt2">New Word</string>
    <string name="g_butt3">Learned</string>
    <string name="userinfo">User information</string>
    <string name="defaulttext">Please Connect Service</string>


</resources>
